chore: general cleanup (#40)

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,7 +1,10 @@
 import Layout from "../components/layout";
+import Footer from "../components/footer";
 
 export default (children) => (
-    <Layout title="About" subtitle="Fiveable Open Source Initiative" {...children} />
+    <div>
+        <Layout title="About" subtitle="Fiveable Open Source Initiative" {...children} />
+    </div>
 );
 
 ## Goals
