feat: git tutorials page (#49)

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -29,5 +29,4 @@ can be found [here](https://github.com/ThinkFiveable/open). We are currently acc
 source projects
 [here](https://docs.google.com/forms/d/e/1FAIpQLSeMuqyb8Tdf3Z2oY0kkFN7frYQT9RX97X09diiCW6FtoFZ1rQ/viewform).
 
-Don't know where to start? Check out our
-[Git tutorials](https://github.com/ThinkFiveable/open/blob/main/git-tutorials/git.md).
+Don't know where to start? Check out our **[Git tutorials](/docs/git)**.
