feat: multiple authors

--- a/pages/docs/git.mdx
+++ b/pages/docs/git.mdx
@@ -5,9 +5,22 @@ export default (children) => (
     <div>
         <Layout
             title="Getting Started with Git/GitHub"
-            author="something"
-            authorPfp="https://avatars.githubusercontent.com/julialding"
-            authorName="Julia Ding"
+            authors={
+                [
+                    {
+                        "icon": "https://avatars.githubusercontent.com/julialding",
+                        "name": "Julia Ding",
+                    },
+                    {
+                        "icon": "https://avatars.githubusercontent.com/eilla1",
+                        "name": "Ella Xu",
+                    },
+                    {
+                        "icon": "https://avatars.githubusercontent.com/zaida04",
+                        "name": "Zaid (Nico)",
+                    },
+                ]
+            }
             publishDate="March 27, 2020"
             {...children}
         />
