chore: fix author layout and publish date

--- a/pages/docs/git.mdx
+++ b/pages/docs/git.mdx
@@ -13,7 +13,7 @@ export default (children) => (
                     },
                     {
                         "icon": "https://avatars.githubusercontent.com/eilla1",
-                        "name": "Ella Xu",
+                        "name": "Ella",
                     },
                     {
                         "icon": "https://avatars.githubusercontent.com/zaida04",
@@ -21,7 +21,7 @@ export default (children) => (
                     },
                 ]
             }
-            publishDate="March 27, 2020"
+            publishDate="March 27, 2021"
             {...children}
         />
     </div>
