feat(Contributor): flex view large, bg change

--- a/pages/contributors.mdx
+++ b/pages/contributors.mdx
@@ -1,6 +1,6 @@
-import Layout from "../../components/layout";
-import Footer from "../../components/footer";
-import Contributor from '../../components/contributor';
+import Layout from "../components/layout";
+import Footer from "../components/footer";
+import Contributor from '../components/contributor';
 
 export default (children) => (
     <div>
