chore: add repoLogo in example

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -36,6 +36,7 @@ Head over to our [GitHub repository](https://github.com/thinkfiveable/open) and 
 ```json
      {
         "repoName": "Name of your repo here",
+        "repoLogo": "(optional) Attach a link to a cover image for your repo",
         "repoOwner": "GitHub username here",
         "projectType": "Type of project",
         "projectDescription": "Describe your project here."
