fix: remove Julia's last name

--- a/pages/docs/git.mdx
+++ b/pages/docs/git.mdx
@@ -9,7 +9,7 @@ export default (children) => (
                 [
                     {
                         "icon": "https://avatars.githubusercontent.com/julialding",
-                        "name": "Julia Ding",
+                        "name": "Julia",
                     },
                     {
                         "icon": "https://avatars.githubusercontent.com/eilla1",
